--- a/MN Aproksymacja/MN Aproksymacja/MN Aproksymacja.vcxproj
+++ b/MN Aproksymacja/MN Aproksymacja/MN Aproksymacja.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\main.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{D0B478F0-21DE-484B-AE18-2F84EB62883B}</ProjectGuid>
     <RootNamespace>MNAproksymacja</RootNamespace>
@@ -109,9 +112,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Desktop\%40uczelnia\MN\lab3\!nasze\main.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
