--- a/MN Aproksymacja/MN Aproksymacja/MN Aproksymacja.vcxproj.filters
+++ b/MN Aproksymacja/MN Aproksymacja/MN Aproksymacja.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Desktop\%40uczelnia\MN\lab3\!nasze\main.cpp">
+    <ClCompile Include="..\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
